client: fix tag spacing

--- a/client/main.less
+++ b/client/main.less
@@ -170,12 +170,13 @@ body {
 }
 
 #tags {
-	display   : grid;
-	padding   : 0.2em;
-	overflow-y: auto;
-	max-height: 100vh;
-	min-width : 16vw;
-	word-break: break-word;
+	display       : flex;
+	flex-direction: column;
+	padding       : 0.2em;
+	overflow-y    : auto;
+	max-height    : 100vh;
+	min-width     : 16vw;
+	word-break    : break-word;
 	.hide-selection();
 }
 
